Thu Oct 16 06:13:09 2014  Knut Franke  <Knut.Franke@gmx.de>

	* cont.c (cont_capture): remove unnecessary variable
	  [ruby-core:65518] [Feature #10341]

Thu Oct 16 05:02:31 2014  Knut Franke  <Knut.Franke@gmx.de>

	* cont.c (fiber_store, fiber_switch): simplify
	  [ruby-core:65518] [Feature #10341]

Thu Oct 16 04:28:41 2014  Knut Franke  <Knut.Franke@gmx.de>

	* cont.c (rb_fiber_t): remove prev_fiber/next_fiber
	  (fiber_link_join, fiber_link_remove): remove functions
	  (fiber_free, fiber_init, root_fiber_alloc):
	   remove references to removed fields and functions
	  [ruby-core:65518] [Feature #10341]

Wed Oct 15 22:08:37 2014  Tanaka Akira  <akr@fsij.org>

	* ext/etc/etc.c (etc_nprocessors_affin): Test CPU_ALLOC availability.
	  CentOS 5 don't have CPU_ALLOC().

Wed Oct 15 18:26:19 2014  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* ext/etc/etc.c (etc_nprocessors_affinity): use sched_getaffinity
	  for getting precious number of available cpus.

	* ext/etc/etc.c (etc_nprocessors): use etc_nprocessors_affinity if
	  possible.

	  [Feature #10267] etc-nprocessors-kosaki2.patch

Wed Oct 15 17:53:28 2014  Tanaka Akira  <akr@fsij.org>

	* test/ruby/envutil.rb (assert_pattern_list) Renamed from
	  assert_regexp_list.
	  Show multiline string in multi lines.

	* test/-ext-/bug_reporter/test_bug_reporter.rb: Use
	  assert_pattern_list.

Wed Oct 15 12:26:58 2014  Tanaka Akira  <akr@fsij.org>

	* test/ruby/envutil.rb (assert_regexp_list): New assertion method.

	* test/ruby/test_rubyoptions.rb: Use assert_regexp_list.

Wed Oct 15 07:21:09 2014  Tanaka Akira  <akr@fsij.org>

	* enum.c: min(n) drops elements bigger than the n-th maximum element.
	  (struct nmin_data): New field to record the n-th maximum element, limit
	  (nmin_filter): Update limit field.
	  (nmin_i): Drop too big elements.
	  (nmin_run): Initialize limit field.

Wed Oct 15 07:00:14 2014  Eric Wong  <e@80x24.org>

	* test/ruby/test_optimization.rb (test_string_size): new test
